# Risk-Identification

./: .gitattributes  .gitignore  LICENSE  README.md  README_cn.md  pyproject.toml
.github/workflows/: ci.yml
config/: Data_Sources-AIAAIC-config.ini  Data_Sources-AIID-config.ini  Data_Sources-CommonCrawlNews-config.ini  Data_Sources-Crawled_Dataset-config.ini  Data_Sources-Hot_list_word_Dataset-config.ini  Data_Sources-OpenNewsArchive-config.ini  Database-config.ini  Identification_Evaluation-config.ini  Identification_Method-AIID_AIAAIC-llm_filter-config.ini  Identification_Method-CN_News-llm_filter-config.ini  Identification_Method-Chinese_Data-llm_filter-config.ini  Identification_Method-CommonCrawlNews-keyword_filter-config.ini  Identification_Method-CommonCrawlNews-llm_filter-config.ini  Identification_Method-Hot_list_word_Dataset-llm_filter-config.ini  Identification_Method-OpenNewsArchive-keyword_filter-config.ini  Identification_Method-OpenNewsArchive-llm_filter-config.ini
data/: AIAAIC_Repository.xlsx  AIID_incidents.csv  README.md
keywords/: Identification-common-custom_phrases.txt  Identification-common-keywords.txt  Identification-common-stopwords.txt
prompt/: Data_Sources-AIAAIC-prompt.md  Identification_Evaluation-prompt.txt  Identification_Method-English-element-extraction-prompt.md  Identification_Method-English-llm_filter-prompt.md  Identification_Method-OpenNewsArchive_Datasets-llm_filter-prompt.md
src/Data_Sources/: README.md
src/Database/: .gitignore  README.md  __init__.py  import_data.py  import_event_news.py  schema.sql
(+47 files in other folders)
